--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,23 +8,25 @@ on:
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-20.04
+    container:
+      image: mcr.microsoft.com/playwright:v1.46.1-jammy
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       - name: Check style
         run: npm run eslint
       - name: Build
         run: npm run build
       - name: Run Jest tests
         run: npm run test
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-      - name: Run PlayWright tests
+      - name: Run Playwright tests
         run: npm run test:e2e
+        env:
+          HOME: /root
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
