--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,47 +22,56 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+
       - name: Install dependencies
         run: npm ci
+
       - name: Check style
         run: npm run eslint
+
       - name: Build
         run: npm run build
+
       - name: Run Jest tests
         run: npm run test
+
       - name: Run Playwright tests
         run: npm run test:e2e
         env:
           HOME: /root
+
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+
       - name: Set up Flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
+
       - name: Deploy app
         if: ${{ github.event_name == 'push' && env.SKIP_COMMIT == 'false'}}
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+
       - name: Build Success
-        uses: rjstone/discord-webhook-notify@v1
-        if: ${{ success() }}
-        with:
-          severity: info
-          text: A new version of Pokedex deployed
-          description: to ${{ secrets.DEPLOYMENT_URL }} by ${{ github.actor }}
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-      - name: Build Failure
-        uses: rjstone/discord-webhook-notify@v1
-        if: ${{ failure() }}
-        with:
-          severity: error
-          text: Build failed
-          description: commit https://github.com/${{ github.repository }}/commit/${{ github.sha }} by ${{ github.actor }} broke the build
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+        if: success()
+        run: |
+          curl -H "Content-Type: application/json" \
+               -X POST \
+               -d '{"content": "A new version of Pokedex deployed"}' \
+               ${{ secrets.DISCORD_WEBHOOK }}
+      
+      - name: Build Fail
+        if: failure()
+        run: |
+          curl -H "Content-Type: application/json" \
+               -X POST \
+               -d '{"content": "commit https://github.com/${{ github.repository }}/commit/${{ github.sha }} by ${{ github.actor }} broke the build"}' \
+               ${{ secrets.DISCORD_WEBHOOK }}
+
   tags_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
